A few fixes and color changes

--- a/_posts/2014-12-20-About_Me.md
+++ b/_posts/2014-12-20-About_Me.md
@@ -2,4 +2,8 @@
 title: Me
 category: About
 ---
-Some stuff about me
+Me
+
+Some stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me.
+
+ Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me.
