--- a/_posts/2014-12-20-About_Me.md
+++ b/_posts/2014-12-20-About_Me.md
@@ -1,9 +1,9 @@
 ---
-title: Me
+title: About Me
 category: About
 ---
-Me
+I write software and build things that need to be built. I believe in simplicity as a rule in design and in life. My hobbies include making music, skateboarding, and speaking Japanese.
 
-Some stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me.
+I attend Vanderbilt University as an undergraduate and will earn a Computer Science degree by December of 2015. I may go on to pursue a PhD in Computer Science, but I have not decided on a specialization yet because so many things interest me. I find computer security, artificial intelligence, brain-computer interaction, and quantum computing particularly intriguing. 
 
- Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me. Some more stuff about me.
+<a href="res/resume.pdf">Download My Resume</a>
