--- a/_posts/2014-12-19-This_Site.md
+++ b/_posts/2014-12-19-This_Site.md
@@ -1,4 +1,4 @@
 ---
 title: This Site
 ---
-This site is hosted by Github pages; you can view the source <a href="https://github.com/mitchellgordon95/mitchellgordon95.github.io">here</a>. Since the site is hosted by Github pages, it leverages the Jekyll blogging framework, which statically renders the site after each update.
+This site is hosted by Github pages; you can view the source <a href="https://github.com/mitchellgordon95/mitchellgordon95.github.io">here</a>. Since the site is hosted by Github pages, it leverages the Jekyll blogging framework.
