Added link to gravity

--- a/_posts/2014-11-01-Gravity.md
+++ b/_posts/2014-11-01-Gravity.md
@@ -3,4 +3,4 @@ title: Gravity
 github: https://github.com/mitchellgordon95/Gravity
 image: img/gravity_title.jpg
 ---
-At Hack Nashville 6 we made a HTML5/javascript multiplayer game. Each player gets a planet on the screen, and you bounce around trying to absorb the other players and gain mass. It's a pretty simple game, but to make it interesting we made mobile apps as controllers, so you can move your planet by tilting your phone. We used the NodeJS/Socket.io stack as well as Phonegap for mobile support.
+At Hack Nashville 6 we made a HTML5/javascript multiplayer game. Each player gets a planet on the screen, and you bounce around trying to absorb the other players and gain mass. It's a pretty simple game, but to make it interesting we made mobile apps as controllers, so you can move your planet by tilting your phone. We used the NodeJS/Socket.io stack as well as Phonegap for mobile support. Check it out at <a href="http://gravity.mitchgordon.me">gravity.mitchgordon.me</a>.
