--- a/_posts/2021-8-31-sota.md
+++ b/_posts/2021-8-31-sota.md
@@ -141,7 +141,7 @@ reasoning (adding, sorting, counting) over many paragraphs of text.
 Which neural architecture achieves SOTA on a task depends entirely on
 the amount of data and compute provided to the architecture. As shown
 above, performance scales like a power law with data, compute, and
-data. This has now been demonstrated for many data domains,
+parameters. This has now been demonstrated for many data domains,
 modalities, and neural architectures.[^autoregressive]
 
 [^autoregressive]: https://arxiv.org/abs/2010.14701
