--- a/_posts/2021-8-31-sota.md
+++ b/_posts/2021-8-31-sota.md
@@ -198,8 +198,7 @@ lately. Here's a few things we could do right now:
 sizes, to help fairly measure the sample complexity curves of new
 methods.
 
-- Compute / parameters should be measured via a standardized platform
-  such, like
+- Compute / parameters should be measured via a standardized platform, like
   [MLPerf](https://www.nvidia.com/en-us/data-center/mlperf/). (But
   perhaps more streamlined to compare new neural architectures.)
 
