--- a/_posts/2021-8-31-sota.md
+++ b/_posts/2021-8-31-sota.md
@@ -88,7 +88,7 @@ test score obscures problems with the model that would cause problems
 in production, such as racial/gender bias[^isbell] or susceptibility
 to attack.[^poisoning] In a recent paper, Google researchers called this problem
 "underspecification,"[^underspecification] and point out several examples across
-the company in which models which achieve similar test scores but exhibit widely
+the company in which models achieve similar test scores but exhibit widely
 divergent behaviors when deployed in production. They show that this is a
 distinct problem from domain-shift, in which the test data distribution is
 different from the training distribution.
