--- a/_posts/2021-8-31-sota.md
+++ b/_posts/2021-8-31-sota.md
@@ -190,7 +190,7 @@ lately. Here's a few things we could do right now:
 
 - Any paper proposing a new "SOTA" neural method needs to report not
   just the data / compute used to achieve SOTA, but the score achieved
-  at several at several points of data/compute. The slope of the curve
+  at several points of data/compute. The slope of the curve
   should be better than all other known methods. SOTA scaling is the
   objective, not SOTA scores.
 
