--- a/_posts/2022-02-01-infinity.md
+++ b/_posts/2022-02-01-infinity.md
@@ -13,13 +13,13 @@ from MathOverflow riled my feathers a bit:
 > infinitely many, write them all down." She was on tenure track, but
 > need I add, didn't get tenure.
 
-What a dumb teacher, right? Everyone knows there's an infinite number
+What a dumb teacher, right? Everyone knows there are an infinite number
 of primes! Haven't you heard of Euclid?
 
 Except I think she's right. (Depending on what she meant, exactly.) 
 
 I *believe* this professor was attempting to make a subtle point that
-many students of mathematics (and people in general) tend to
+many students of mathematics tend to
 miss. That is, they mistakenly believe that **infinity** actually
 exists. Like, in the real world.
 
@@ -50,13 +50,13 @@ and who would give it?[^1]
 
 Anyway, back to the primes. Yes, the student is correct in that there
 is an infinite number of primes. (And by that we mean there is a
-repeatable process for generating primes which we can repeat until the
+repeatable process[^2] for generating primes which we can repeat until the
 heat death of the universe.)
 
 But the teacher is also right, in her way. If we built a computer to
 count all the primes, it would eventually run out of memory. Even if
 we turned the whole universe into a computer, eventually we'd run out
-of stars and junk to fuel our prime-counting computer. Thus the number of primes we'll ever be able to count is finitely bounded by the size of our universe.[^2] 
+of stars and junk to fuel our prime-counting computer. Thus the number of primes we'll ever be able to count is finitely bounded by the size of our universe.[^3] 
 
 That's... funny? Sad? I don't know. Why did I even write this?
 
@@ -66,4 +66,6 @@ That's... funny? Sad? I don't know. Why did I even write this?
 
 [^1]: If infinity doesn't really exist, then why do we talk about it so much? Because it's a useful approximation of reality. Of course, it doesn't make sense to ask, "if I keep asking for pencils how many pencils will I have?" But suppose instead of asking for 1 pencil each time, I asked for 1/4th a pencil, and then 1/9th, and then $$1/n^2$$ of a pencil for ever and ever. How many pencils would I have? The answer is that I will get real close to 1.645 pencils, but never more than that. Why's that useful? Well, ever try to build a rocket? No? Me neither.
 
-[^2]: I wonder how many digits it has?
+[^2]: Euclid's proof is famously [not constructive](https://en.wikipedia.org/wiki/Euclid%27s_theorem#Euclid's_proof), so it doesn't directly give us a method for constructing a new prime. I prefer the [proof](https://en.wikipedia.org/wiki/Euclid%27s_theorem#Proof_by_construction) by Filip Saidak that does.
+
+[^3]: I wonder how many digits it has?
