Add TOC for Aider post

--- a/_posts/2025-02-26-aider.md
+++ b/_posts/2025-02-26-aider.md
@@ -8,7 +8,92 @@ I started using [aider](https://github.com/Aider-AI/aider) last month as a way t
 
 Note: if you have seen [Claude Code](https://github.com/anthropics/claude-code), aider has a very similar UX.
 
-{:toc}
+<style>
+    .toc {
+        background-color: #f9f9f9;
+        border: 1px solid #ddd;
+        padding: 15px 20px;
+        margin: 20px 0;
+        border-radius: 4px;
+        max-width: 90%;
+        font-family: Georgia, serif;
+        line-height: 1.6;
+    }
+    
+    .toc-title {
+        font-weight: bold;
+        margin-bottom: 8px;
+        font-size: 1.1em;
+        color: #444;
+    }
+    
+    .toc ul {
+        list-style-type: none;
+        padding-left: 15px;
+        margin: 0.5em 0;
+    }
+    
+    .toc li {
+        margin: 5px 0;
+    }
+    
+    .toc a {
+        text-decoration: none;
+        color: #2c6aa0;
+    }
+    
+    .toc a:hover {
+        text-decoration: underline;
+    }
+    
+    /* Collapsible TOC option */
+    .toc-toggle {
+        cursor: pointer;
+        user-select: none;
+        color: #777;
+        font-size: 0.9em;
+        margin-left: 5px;
+    }
+    
+    .toc-content.collapsed {
+        display: none;
+    }
+</style>
+
+<!-- Table of Contents -->
+<div class="toc">
+    <div class="toc-title">
+        Table of Contents
+        <span class="toc-toggle" onclick="toggleTOC()">[hide]</span>
+    </div>
+    <div class="toc-content" id="toc-content">
+        <ul>
+            <li><a href="#preliminaries">1. Preliminaries</a></li>
+            <li><a href="#start-a-feedback-loop">2. Start A Feedback Loop</a></li>
+            <li><a href="#iterate">3. Iterate</a></li>
+            <li><a href="#make-big-changes">4. Make Big Changes</a></li>
+            <li><a href="#gauge-difficulty">5. Gauge Difficulty</a></li>
+            <li><a href="#when-all-else-fails">6. When All Else Fails</a></li>
+            <li><a href="#clean-up-the-code">7. Clean Up The Code</a></li>
+        </ul>
+    </div>
+</div>
+
+<!-- JavaScript for the collapsible TOC -->
+<script>
+    function toggleTOC() {
+        const content = document.getElementById('toc-content');
+        const toggle = document.querySelector('.toc-toggle');
+        
+        if (content.classList.contains('collapsed')) {
+            content.classList.remove('collapsed');
+            toggle.textContent = '[hide]';
+        } else {
+            content.classList.add('collapsed');
+            toggle.textContent = '[show]';
+        }
+    }
+</script>
 
 # Preliminaries
 
